Added String resources for login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
+    <string name="please_enter_username">Please enter Username!</string>
+    <string name="please_enter_password">Please enter Password!</string>
+    <string name="incorrect_password">Incorrect password!</string>
+    <string name="user_doesnt_exists">User does not exists!</string>
+    <string name="internet_connection_problem">Internet connection problem!</string>
 </resources>
