--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RetailistanChat</string>
+    <string name="app_name">Retailistan Chat</string>
     <string name="action_settings">Settings</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -16,4 +16,6 @@
     <string name="user_doesnt_exists">User does not exists!</string>
     <string name="internet_connection_problem">Internet connection problem!</string>
     <string name="enter_message">Enter message</string>
+    <string name="logout">Logout</string>
+    <string name="logged_out_success">Logged out successfully!</string>
 </resources>
