Layout fixes, progressbar on login and register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="enter_message">Enter message</string>
     <string name="logout">Logout</string>
     <string name="logged_out_success">Logged out successfully!</string>
+    <string name="username_already_taken">Username already taken!</string>
+    <string name="registration_successful">Registration successful!</string>
 </resources>
