--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="logged_out_success">Logged out successfully!</string>
     <string name="username_already_taken">Username already taken!</string>
     <string name="registration_successful">Registration successful!</string>
+    <string name="reply_label">Reply</string>
 </resources>
