--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="username_already_taken">Username already taken!</string>
     <string name="registration_successful">Registration successful!</string>
     <string name="reply_label">Reply</string>
+    <string name="notif_content_sent">Message sent!</string>
 </resources>
